Add a print-full-width class to use available width when printing

--- a/app/views/exercises/show.html.erb
+++ b/app/views/exercises/show.html.erb
@@ -10,7 +10,7 @@
     <span class='hidden-sm'><%= t('.handin') %></span><br>
     <i class="mdi mdi-chevron-down"></i>
   <% end %>
-  <div class="col-sm-10 col-xs-12">
+  <div class="col-sm-10 col-xs-12 print-full-width">
     <div class="card exercise-description">
       <div class="card-title card-title-colored">
         <h2 class="card-title-text">
