--- a/app/assets/stylesheets/print.css.less
+++ b/app/assets/stylesheets/print.css.less
@@ -2,7 +2,15 @@
 
   @page {
     size: A4;
-    margin: 25mm;
+    margin-top: 15mm;
+    margin-bottom: 15mm;
+    margin-left: 25mm;
+    margin-right: 25mm;
+  }
+
+  .print-full-width {
+    max-width: initial;
+    width: 100%;
   }
 
   p {
